--- a/MediaPicker/gradle/wrapper/gradle-wrapper.properties
+++ b/MediaPicker/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Aug 31 10:14:11 COT 2018
+#Wed Oct 07 12:27:31 IST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.9-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
